--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,6 +14,23 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-family: "Poppins", "Arial", "Helvetica", "sans-serif";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.card__title {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0;
+  color: #212121;
 }
 
 .card__like-btn {
