--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,10 +1,10 @@
 .cards {
-padding-top: 20px;
+  padding-top: 20px;
 }
 
 .cards__list {
   list-style-type: none;
-  padding:0;
+  padding: 0;
   margin: 0;
   display: grid;
   justify-content: center;
@@ -12,11 +12,8 @@ padding-top: 20px;
   gap: 40px 20px;
 }
 
-.card__title {
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  letter-spacing: 0;
-  color: #212121;
+@media screen and (max-width: 627px) {
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+  }
 }
