--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,5 +5,10 @@
   line-height: 16px;
   letter-spacing: 0;
   color: #212121;
-  margin: 60px 588px;
+  display: flex;
+  justify-content: center;
+  margin: 60px auto;
+  width: 105px;
+  height: 16px;
+  white-space: nowrap;
 }
