--- a/blocks/content.css
+++ b/blocks/content.css
@@ -2,18 +2,16 @@
   max-width: 1280px;
   margin: 0 auto;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
-  padding-bottom: 40px;
+  padding-bottom: 0;
 }
 
 @media screen and (max-width: 627px) {
-
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 288px;
-}
-
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 288px;
+  }
 }
