--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,4 +1,4 @@
-.footer {
+.footer__copyright {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   margin: 60px auto;
-  width: 105px;
-  height: 16px;
+  max-width: 105px;
+  max-height: 16px;
   white-space: nowrap;
 }
