--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -35,8 +35,8 @@
   line-height: 16px;
   letter-spacing: 0;
   color: rgba(33, 33, 33, 70%);
-  width: 420px;
-  height: 48px;
+  max-width: 420px;
+  max-height: 48px;
   padding-bottom: 18px;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -62,7 +62,7 @@
   color: #212121;
   opacity: 70%;
   border: none;
-  height: 16px;
+  max-height: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
