--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -9,6 +9,21 @@
   justify-content: center;
   margin: 60px auto;
   max-width: 105px;
-  max-height: 16px;
   white-space: nowrap;
+}
+
+@media screen and (max-width: 288px) {
+  .footer__copyright {
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    letter-spacing: 0;
+    color: #212121;
+    display: flex;
+    justify-content: center;
+    margin: 60px auto;
+    max-width: 105px;
+    white-space: nowrap;
+  }
 }
