--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -36,7 +36,6 @@
   letter-spacing: 0;
   color: rgba(33, 33, 33, 70%);
   max-width: 420px;
-  max-height: 48px;
   padding-bottom: 18px;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -62,7 +61,6 @@
   color: #212121;
   opacity: 70%;
   border: none;
-  max-height: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -143,6 +141,11 @@
   }
 
   .profile__add-btn {
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    letter-spacing: 0%;
     margin: 0;
     width: 100%;
     cursor: pointer;
