--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,14 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: "Poppins", "Arial", "Helvetica", "sans-serif";
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+  margin-top: 12px;
 }
 
 .card__title {
@@ -27,8 +20,7 @@
   line-height: 24px;
   letter-spacing: 0;
   color: #212121;
-  max-width: 119px;
-  max-height: 24px;
+  max-width: 350px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -36,6 +28,9 @@
 
 .card__like-btn {
   background-image: url(../images/heart.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   width: 23px;
   height: 20px;
   border: none;
@@ -45,48 +40,28 @@
 }
 
 .card__like-btn:hover {
-  color: #212121;
+  opacity: 1;
 }
 
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
   }
-  .card__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-family: "Poppins", "Arial", "Helvetica", "sans-serif";
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 0%;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    padding-top: 12px;
-  }
 
   .card__title {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
     letter-spacing: 0;
     color: #212121;
-    max-width: 95px;
+    max-width: 250px;
   }
 
   .card__like-btn {
     background-image: url(../images/heart.svg);
     width: 20px;
     height: 18px;
-    border: 2px;
     background-color: transparent;
     opacity: 40%;
-  }
-
-  .card__like-btn:hover {
-    color: #212121;
   }
 }
