--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -16,5 +16,6 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    row-gap: 20px;
   }
 }
