--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -9,6 +9,7 @@
   border-radius: 8px;
   width: 190px;
   height: 190px;
+  object-fit: cover;
 }
 
 .profile__name {
@@ -59,7 +60,8 @@
   letter-spacing: 0;
   margin-top: 0;
   color: #212121;
-  opacity: 70%;
+  background-color: transparent;
+  opacity: 0.7;
   border: none;
   display: flex;
   align-items: center;
@@ -71,7 +73,7 @@
 }
 
 .profile__edit-btn:hover {
-  color: #212121;
+  opacity: 1;
 }
 
 .profile__add-btn {
@@ -81,7 +83,7 @@
   line-height: 16px;
   letter-spacing: 0;
   margin-left: auto;
-  border-radius: 8%;
+  border-radius: 8px;
   width: 149px;
   height: 52px;
   margin-top: 138px;
@@ -95,7 +97,7 @@
 }
 
 .profile__add-btn:hover {
-  background-color: rgba(33, 33, 33, 80%);
+  background-color: rgba(33, 33, 33, 0.8);
 }
 
 @media screen and (max-width: 627px) {
@@ -108,7 +110,6 @@
   }
 
   .profile__name {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 20px;
