--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,8 +7,7 @@
   color: #212121b2;
   display: flex;
   justify-content: center;
-  margin: 60px auto;
-  max-width: 105px;
+  padding: 60px 0;
   white-space: nowrap;
 }
 
