--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -86,6 +86,7 @@
   border-radius: 8px;
   width: 149px;
   height: 52px;
+  border: none;
   margin-top: 138px;
   background-color: #212121;
   color: #fff;
@@ -97,7 +98,7 @@
 }
 
 .profile__add-btn:hover {
-  background-color: rgba(33, 33, 33, 0.8);
+ opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
@@ -110,7 +111,6 @@
   }
 
   .profile__name {
-    font-weight: 500;
     font-size: 20px;
     line-height: 20px;
     letter-spacing: 0;
@@ -120,8 +120,6 @@
   }
 
   .profile__description {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    font-weight: 500;
     font-size: 16px;
     line-height: 16px;
     letter-spacing: 0;
