--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -98,7 +98,7 @@
 }
 
 .profile__add-btn:hover {
- opacity: 0.8;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
@@ -140,26 +140,11 @@
   }
 
   .profile__add-btn {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
-    letter-spacing: 0%;
     margin: 0;
     width: 100%;
-    cursor: pointer;
   }
 
   .profile__edit-btn {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
-    letter-spacing: 0;
-    border: none;
-    color: #212121;
-    opacity: 70%;
-    margin: 0 90px;
-    white-space: nowrap;
+    margin: 0 auto;
   }
 }
