--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -13,6 +13,13 @@
   gap: 40px 20px;
 }
 
+.card__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 12px;
+}
+
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
