New update to like button

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -46,6 +46,15 @@
   opacity: 1;
 }
 
+.card__like-btn_liked {
+  background-image: url(../images/redheart.svg);
+  opacity: 1;
+}
+
+.card__like-btn_liked:hover {
+  background-image: url(../images/lightred.svg);
+}
+
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
