--- a/blocks/card.css
+++ b/blocks/card.css
@@ -42,6 +42,28 @@
   display: block;
 }
 
+.card__delete-btn {
+  background-image: url(../images/deletedefault.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 32px;
+  height: 32px;
+  top: 10px;
+  left: 371px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  display: block;
+}
+
+.card__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 12px;
+}
+
 .card__like-btn:hover {
   opacity: 1;
 }
@@ -53,6 +75,14 @@
 
 .card__like-btn_liked:hover {
   background-image: url(../images/lightred.svg);
+}
+
+.card__delete-btn {
+  background-image: url(../images/deletedefault.svg);
+}
+
+.card__delete-btn:hover {
+  background-image: url(../images/deletehover.svg);
 }
 
 @media screen and (max-width: 627px) {
