--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -27,6 +27,35 @@
   border-radius: 8px;
 }
 
+.modal__content_type_preview {
+  padding: 0;
+  position: relative;
+}
+
+.modal__caption {
+  font-family: "Poppins", Arial, sans-serif;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0;
+  width: 214px;
+  height: 32px;
+  color: #fff;
+  background-color: #212121;
+  margin: 12px 0 44px;
+  text-align: left;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  object-fit: contain;
+  border-radius: 8px;
+}
+
 .modal__close-btn {
   position: absolute;
   top: 32px;
@@ -41,6 +70,20 @@
   background-color: transparent;
   border: 1px;
   opacity: 0.4;
+}
+
+.modal__close_type_preview {
+  background-image: url(../images/Close-Icon.svg);
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 0;
+  right: -52.5px;
+  width: 40px;
+  height: 40px;
+  opacity: 1;
+  cursor: pointer;
 }
 
 .modal__close-btn:hover {
