--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -170,4 +170,28 @@
   .modal__submit-btn {
     width: 100%;
   }
+
+  .modal__content_type_preview {
+    width: 100%;
+    margin: 0 40px;
+  }
+
+  .modal__close_type_preview {
+    margin-bottom: 8px;
+    top: -50px;
+    right: 0;
+
+  }
+
+  .modal__image {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .modal__caption {
+    font-size: 12px;
+    margin: 10px 0;
+    width: 175px;
+    height: 27px;
+  }
 }
