--- a/blocks/card.css
+++ b/blocks/card.css
@@ -101,4 +101,8 @@
     background-position: center;
     background-repeat: no-repeat;
   }
+
+  .card__delete-btn {
+    margin: 10px 246px;
+  }
 }
