--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,11 +10,15 @@
   align-items: center;
   justify-content: center;
   padding: 0 20px;
+  opacity: 0;
   visibility: hidden;
+  transition: visibility 0.3s, opacity 0.3s ease-in;
 }
 
 .modal_opened {
   visibility: visible;
+  opacity: 1;
+  transition: visibility 0.3s, opacity 0.3s ease-in;
 }
 
 .modal__container {
@@ -72,7 +76,7 @@
   opacity: 0.4;
 }
 
-.modal__close_type_preview {
+.modal__close-btn_type_preview {
   background-image: url(../images/Close-Icon.svg);
   background-repeat: no-repeat;
   background-color: transparent;
@@ -106,10 +110,11 @@
   margin-bottom: 32px;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 100%;
+  font-size: 16px;
+  line-height: 110%;
   letter-spacing: 0;
   border-radius: 8px;
+  color: rgba(33, 33, 33, 0.7);
 }
 
 .modal__input {
@@ -176,11 +181,10 @@
     margin: 0 40px;
   }
 
-  .modal__close_type_preview {
+  .modal__close-btn_type_preview {
     margin-bottom: 8px;
     top: -50px;
     right: 0;
-
   }
 
   .modal__image {
